<resources>
    <string name="app_name">皇冠6686</string>
    <string name="mainpage">首页</string>
    <string name="betting">投注</string>
    <string name="score">比分</string>
    <string name="prize">开奖</string>
    <string name="mine">我的</string>
    <string name="service">客服</string>
    <string name="back">返回</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="go_to_register">立即注册</string>
    <string name="foget_psw">忘记密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="pc_pay">充值</string>
    <string name="pc_getoutmoney">提款</string>
    <string name="pc_betting_history">投注记录</string>
    <string name="pc_account_datail">账户明细</string>
    <string name="haventsettled">未结明细</string>
    <string name="accesslog">存取记录</string>
    <string name="gamerules">游戏规则</string>
    <string name="personal">个人资料</string>
    <string name="pc_paw_manager">密码管理</string>
    <string name="pc_service">我的客服</string>
    <string name="available_balance">可用余额</string>
    <string name="credit_limit">信用额度</string>
    <string name="winning_amount">最近中奖金额</string>
    <string name="title_activity_login">Sign in</string>
    <string name="id_not_login">手机无法登录?</string>
    <string name="input_password">请输入密码</string>
    <string name="btn_auth_code">获取验证码</string>
    <string name="input_account_name">请输入账户名</string>
    <string name="regist">注册账户</string>
    <string name="regist_agent">推荐代理</string>
    <string name="regist_agent_account">推荐代码账号</string>
    <string name="regist_account">会员账号</string>
    <string name="regist_account_action">6-15个字母，数字</string>
    <string name="regist_psw">会员密码</string>
    <string name="regist_psw_length">长度为6-15位字符</string>
    <string name="regist_confirm">密码确认</string>
    <string name="regist_name">真实名字</string>
    <string name="regist_name_rule">与提款账号一致，否则无法提款</string>
    <string name="regist_money_psw">取款密码</string>
    <string name="regist_money_psw_confirm">提款必须认证，务必记住</string>
    <string name="regist_email">邮箱</string>
    <string name="sports_betting">体育投注</string>
    <string name="sports_help">存取帮助</string>
    <string name="sports_service">在线客服</string>
    <string name="baccarat">百家乐</string>
    <string name="tigerVSdragon">龙虎斗</string>
    <string name="roulette">轮盘</string>
    <string name="news">最新优惠</string>
    <string name="pay_online">在线支付</string>
    <string name="company_income">公司入款</string>
    <string name="football">足球</string>
    <string name="basketball">篮球</string>
    <string name="shixun">视讯</string>
    <string name="accountisempty">账号密码为空，请检查！</string>
    <string name="loginerr">登录失败</string>
    <string name="regist_err">注册失败</string>
    <string name="loginsuccss">登录成功</string>
    <string name="modifypsw_question">密码提示问题</string>
    <string name="modifypsw_answer">问题答案</string>
    <string name="birthday">生日</string>
    <string name="modify_login_psw">修改登录密码</string>
    <string name="modify_money_psw">修改提款密码</string>
    <string name="suggest_psw">为了您的额账号安全，我们强烈建议您每30天修改一次密码。账户密码必须为6-15个数字或字母.</string>
    <string name="suggest_modify_moneypsw">为了您的资金安全,我们强烈建议您不定时修改提款密码。密码为4位数字(0-9)。</string>
    <string name="pswisempty">密码有空值</string>
    <string name="password">原密码</string>
    <string name="newpassword1">新密码</string>
    <string name="newpassword2">确认新密码</string>
    <string name="affirm">确认提交</string>
    <string name="depositrecords">存款记录</string>
    <string name="wateraccount">流水号</string>
    <string name="time">时间</string>
    <string name="sum">金额</string>
    <string name="bank">备注</string>
    <string name="style">方式</string>
    <string name="state">状态</string>
    <string name="success_money">本页汇款成功金额：</string>
    <string name="pays_online">在线存款</string>
    <string name="takeoutmoney_online">在线提款</string>
    <string name="check_account"> + 查看入款账号</string>
    <string name="use_companyincome">如何使用公司入款</string>
    <string name="which_bank">转入银行</string>
    <string name="which_type">汇款方式</string>
    <string name="getin_type">充值方式</string>
    <string name="type_in">请输入汇款金额</string>
    <string name="type_out">请输入提款金额</string>
    <string name="pay_time">汇款时间</string>
    <string name="confirm_pay">确定提交</string>
    <string name="bank_name">银行账户</string>
    <string name="bank_num">请输入银行账号</string>
    <string name="takeout_money">我要提款</string>
    <string name="change_banknum">更改账户</string>
    <string name="getmoney_psw">取款密码</string>
    <string name="take_money">提款金额</string>
    <string name="type_in_psw">请输入取款密码!</string>
    <string name="atleast">最低100元</string>
    <string name="takeout_bank">开户银行:</string>
    <string name="takeout_num">银行账号:</string>
    <string name="takeout_name">账户姓名:</string>
    <string name="please_check">请选择</string>
    <string name="regist_question1">你的车牌号码</string>
    <string name="regist_question2">你所在城市</string>
    <string name="regist_question3">你的生日</string>
    <string name="regist_question4">你的名字</string>
    <string name="regist_question5">你父亲的名字</string>
    <string name="regist_question6">你母亲的名字</string>
    <string name="regist_question7">你儿女的名字</string>
    <string name="regist_question8">你喜欢的数字</string>
    <string name="regist_question9">你喜欢的品牌</string>
    <string name="regist_question10">你喜欢的运动</string>
    <string name="regist_question11">你喜欢的颜色</string>
    <string name="regist_question12">你喜欢的球队</string>
    <string name="regist_question13">你喜欢的球星</string>
    <string name="regist_null">注册资料要全部填写完成才能完成注册。</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="transaction">交易状况</string>
    <string name="acconut_history">账户历史</string>
    <string name="betting_record">投注记录</string>
    <string name="betting_bill">交易单</string>
    <string name="history_date">日期</string>
    <string name="history_total">投注额</string>
    <string name="history_total_can"> 有效金额</string>
    <string name="history_win_or_lose">输/赢</string>
    <string name="login_err">登陆失败</string>
    <string name="please_typein_money">请输入金额</string>
    <string name="please_choose_pay_type">请选择充值方式</string>
    <string name="aoocunt_money_now">目前剩余金额：</string>
    <string name="can_win_total">可赢金额:</string>
    <string name="betting_once_atleast">单注最低:</string>
    <string name="betting_once_atmost">单注最高:</string>
    <string name="type_in_betting_money">请输入投注金额</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="football_dan">足球单式</string>
    <string name="football_gun">足球滚球</string>
    <string name="basketball_dan">篮球单式</string>
    <string name="basketball_gun">篮球滚球</string>
    <string name="ag">真人视讯</string>
    <string name="lottery">彩票游戏</string>
    <string name="personal_center">个人中心</string>
    <string name="system_error">系统异常，请稍后尝试！</string>
    <string name="football_betting">足球投注</string>
    <string name="basketball_betting">篮球投注</string>
    <string name="volleyball_betting">排球投注</string>
    <string name="bet_success">下注成功!</string>
    <string name="bet_error">下注失败，请重新尝试!</string>
    <string name="betting_finish">赛事已关闭！</string>
    <string name="init_money">0.00</string>
    <string name="app_support_lowest_sdk">APP支持安卓最低版本为4.0</string>
    <string name="net_error">网络连接有问题,请检查！</string>
    <string name="error">错误</string>
    <string name="sorry">Sorry...</string>
    <string name="bet_min">赛事最小投注额为</string>
    <string name="bet_max">赛事最大投注额为</string>
    <string name="rate_error">赔率异常,请选择其他赛事下注</string>
    <string name="money_justnow"> 目前余额: </string>
    <string name="account_not_same">两次输入的账户密码不一致！</string>
    <string name="change_success">修改成功</string>
    <string name="make_sure_change_money_pwd">确认修改提款密码</string>
    <string name="make_sure_change_account_pwd">确认修改账户密码</string>
    <string name="sucess_congratulations">Congratulations...</string>
    <string name="income_records">存款记录</string>
    <string name="takeout_records">取款记录</string>
    <string name="company_income_h5">公司入款说明</string>
    <string name="confirm_income">确定充值</string>
    <string name="do_not_have_type">暂无有效的充值方式</string>
    <string name="no_more_message">没有更多数据了！</string>
    <string name="type_in_money">请填写提款金额！</string>
    <string name="not_click_manytimes">请勿多次连续点击！</string>
    <string name="select_bank">请选择银行</string>
    <string name="typein_banknum">请填写银行卡号！</string>
    <string name="take_out_money">提款金额最低100元！</string>
    <string name="plz_select_psw_question">请选择密码提示问题！</string>
    <string name="psw_type_error">密码格式不正确，应为6-15位字符！</string>
    <string name="account_type_error">账户格式不正确，应为6-15位字符！</string>
    <string name="not_have_you_select_match"> 暂时没有您选择的赛事！</string>
    <string name="must_select_bank_message">银行相关转账需要选择转账的银行信息！</string>
    <string name="select_time">请选择如款时间！</string>
    <string name="select_income_type">请选择入款方式！</string>
    <string name="type_in_income_money">请填写入款金额！</string>
    <string name="systm_err_try_again">系统异常，重新打开面页尝试！</string>
    <string name="app_update">新版本升级V</string>
    <string name="center_text">让您享受更流畅的游戏过程！</string>
    <string name="center_text2">为了让您享受更流畅的游戏过程,本APP支持的最低Android版本为4.2</string>
    <string name="confirm_text">马上更新</string>
    <string name="close_app">关闭应用</string>
    <string name="cancle_text">以后在说</string>

</resources>
