<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_d4d4d4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_dddddd"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/dimen_16"
                android:text="@string/history_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/dimen_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/dimen_16"
                android:text="@string/history_total" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/dimen_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/dimen_16"
                android:text="@string/history_total_can" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/dimen_16"
                android:text="@string/history_win_or_lose" />
        </LinearLayout>


    </LinearLayout>
    <ListView

        android:id="@+id/lv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
</LinearLayout>