<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_50"
            android:src="@mipmap/getinmoney" />

        <LinearLayout
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/white_ffffff"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/takeout_bank"
                    android:textSize="@dimen/dimen_16" />

                <TextView
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:id="@+id/tv_tabkeout_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/dimen_16" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"

                android:background="@color/white_ffffff"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/takeout_num"
                    android:textSize="@dimen/dimen_16" />

                <TextView
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:id="@+id/tv_takeout_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/dimen_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_30"

                android:background="@color/white_ffffff"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/takeout_name"
                    android:textSize="@dimen/dimen_16" />

                <TextView
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:id="@+id/tv_takeout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="***"
                    android:textSize="@dimen/dimen_16" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45"
            android:layout_marginLeft="@dimen/dimen_30"
            android:layout_marginRight="@dimen/dimen_30"
            android:layout_marginTop="@dimen/dimen_50"
            android:background="@color/white_ffffff">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0.5"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:background="@color/gray_e6e6e6" />

            <TextView
                android:id="@+id/tv_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_18"
                android:text="@string/getmoney_psw"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/dimen_18" />


            <EditText
                android:id="@+id/et_takeoutmoney_psw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_50"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_toRightOf="@+id/tv_psw"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/type_in_psw"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/red_84201e"
                android:textSize="@dimen/dimen_16" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45"
            android:layout_marginLeft="@dimen/dimen_30"
            android:layout_marginRight="@dimen/dimen_30"
            android:background="@color/white_ffffff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0.5"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:background="@color/gray_e6e6e6" />

            <TextView
                android:id="@+id/tv_bankname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_18"
                android:text="@string/take_money"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/dimen_18" />


            <EditText
                android:id="@+id/et_money"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_50"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_toRightOf="@+id/tv_bankname"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/atleast"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/red_84201e"
                android:textSize="@dimen/dimen_16" />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_confirm_pay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_50"
            android:background="@color/red_84201e"
            android:gravity="center"
            android:text="@string/confirm_pay"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/dimen_18" />

    </LinearLayout>
</RelativeLayout>