<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f5f5f5"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/view_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:background="@color/white_fbfbfb">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/gray_c8c8c8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/home_selected" />

                <TextView

                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:text="@string/mainpage"
                    android:textColor="@color/red_ea541f"
                    android:textSize="@dimen/dimen_10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_betting"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_betting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/home_selected" />

                <TextView

                    android:id="@+id/tv_betting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:text="@string/betting"
                    android:textColor="@color/gray_666666"
                    android:textSize="@dimen/dimen_10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mine"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/home_selected" />

                <TextView
                    android:id="@+id/tv_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:text="@string/mine"
                    android:textColor="@color/gray_666666"
                    android:textSize="@dimen/dimen_10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_service"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/home_selected" />

                <TextView
                    android:id="@+id/tv_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:text="@string/service"
                    android:textColor="@color/gray_666666"
                    android:textSize="@dimen/dimen_10" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
